--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,12 +1,6 @@
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-}
 header .logo-img{
     margin: center;
-    width: 10%;
+    width: 15%;
     height: auto;
     animation: fadeIn 2s, forwards, moveUp 2s forwards, zoomIn 2s forwards;
 }
@@ -19,43 +13,38 @@ header .logo-img{
 }
 @keyframes moveUp{
     to{
-        transform:translateY(-20px) scale(1);
+        transform:translateY(0.2) scale(0.2);
     }
 }
 
 @keyframes zoomIn{
     to{
-        transform:translateY(-20px) scale(1.5);
+        transform:translateY(2px) scale(0.5);
     }
-}
-h2{
-    text-align: center;
-    font-size: 40px;
 }
 .izquierda-text{
     text-align: center;
     font-size: 20px;
     width: 700px;
-    height: auto;
     padding: 10%;
-    margin-right: auto;
+    margin-left: 10.5%;
+    align-items: center;
 }
 .welcome-img{
     float: right;
     scroll-margin-block-end: 70px;
-    margin: auto;
+    margin-left: -35.5%;
     padding: 2.5%;
     width: 700px;
-    height: auto;
+    align-items: center;
 }
 .derecha-text{
     text-align: center;
     font-size: 20px;
     width: 700px;
-    height: auto;
     padding: 10%; 
-    align-items: right;
-    margin-left: 45%;
+    align-items: center;
+    margin-left: 35.5%;
 }
 .mascota-img{
     float: left;
@@ -63,37 +52,20 @@ h2{
     margin: auto;
     padding: 2.5%;
     width: 700px;
-    height: auto;
     text-align: center;
-}
-header, footer {
-    background: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1em 0;
-}
-nav {
-    text-align: center;
-    background: #555;
-    padding: 0.5em 0;
 }
 nav a {
-    color: #fff;
+    color: #333;
     margin: 0 1em;
     text-decoration: none;
     transition: color 0.3s ease;
-    font-size: 35px;
+    font-size: 25px;
 }
 nav a:hover {
-    color: #03BB85; /* Cambia el color al pasar el mouse */
+    color: #03BB85; 
 }
 .container {
     padding: 1em 2em;
-}
-.section-title {
-    color: #333;
-    margin: 1em 0;
-    font-size: 1.5em;
 }
 .welcome-img, .mascota-img {
     max-width: 100%;
