--- a/CSS/servicios.css
+++ b/CSS/servicios.css
@@ -3,7 +3,11 @@ body {
     line-height: 1.6;
     margin: center;
     padding: 0;
-    background-color: #136C66;
+}
+footer{
+    color: #000000;
+    text-align: center;
+    padding: 1em 0;
 }
 section{
     width: 1060px;
@@ -13,13 +17,9 @@ section{
 section{
     align-items: center;
 }
-h1{
-    text-align: center;
-    font-size: 60px;
-}
 header .logo-img{
     margin: center;
-    width: 10%;
+    width: 15%;
     height: auto;
     animation: fadeIn 2s, forwards, moveUp 2s forwards, zoomIn 2s forwards;
 }
@@ -32,47 +32,26 @@ header .logo-img{
 }
 @keyframes moveUp{
     to{
-        transform:translateY(-20px) scale(1);
+        transform:translateY(0.2) scale(0.2);
     }
 }
 
 @keyframes zoomIn{
     to{
-        transform:translateY(-20px) scale(1.5);
+        transform:translateY(2px) scale(0.5);
     }
 }
 img{
     width: 250px;
     height: auto;
 }
-header, footer {
-    background: #136C66;
-    color: #fff;
-    text-align: center;
-    padding: 1em 0;
-}
 nav {
     text-align: center;
     background: #555;
     padding: 0.5em 0;
 }
-nav a {
-    color: #fff;
-    margin: 0 1em;
-    text-decoration: none;
-    transition: color 0.3s ease;
-    font-size: 35px;
-}
 nav a:hover {
-    color: #03BB85; /* Cambia el color al pasar el mouse */
-}
-.container {
-    padding: 1em 2em;
-}
-.section-title {
-    color: #333;
-    margin: 1em 0;
-    font-size: 1.5em;
+    color: #03BB85; 
 }
 ul {
     list-style-type: none;
@@ -83,30 +62,20 @@ ul li {
     margin: 0.5em 0;
     padding: 0.5em;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 figure{
-    background: #E9EDEF;
+    background: #03BB85;
     display: inline-block;
-    margin: 0;
     padding: 10px 10px 30px;
     border-radius: 3px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
     position: relative;
-    filter: blur(1px) saturate(50%);
-    transition: all 350ms ease-in-out;
+    transform: rotate(none);
 }
-figure:nth-of-type(4n+4) {/* 4,8*/ 
-    transform: rotate(7deg);
-}
-figure:nth-of-type(4n+1){/*1,5,9*/
-    transform: rotate(-8deg);
-}
-figure:nth-of-type(4n-6){/*2,6*/
-    transform: rotate(20deg);
-}
-figure:nth-of-type(4n-1){/*3,7*/
-    transform: rotate(-15deg);
+figure::-moz-focus-inner{
+    width: 175px;
+    height: 175px;
 }
 figure:hover{
     transform: rotate(0) scale(1.5,1.5);
